@@ -680,3 +680,4 @@
 20040329 sound/sdlsound.c: make 8-bit sound work again.
 20040331 Move the machine-specific files into the machines/ directory.
 20040331 widget/{menu.c,menu_data.c}: fix up for the machines/ changes.
+20040331 ui/gtk/gtkjoystick.c: improve user interface.
